@@ -42,6 +42,7 @@
       <menuitem name="ViewSidePanelMenu" action="ViewSidePanel"/>
       <separator/>
       <menuitem name="ViewFullScreenMenu" action="ViewFullScreen"/>
+      <menuitem name="ViewOriginalSizeMenu" action="ViewOriginalSize"/>
       <menuitem name="ViewScalingMenu" action="ViewScaling"/>
       <menuitem name="ViewReadOnlyMenu" action="ViewReadOnly"/>
     </menu>
