@@ -1,3 +1,8 @@
+2008-10-20  Jonh Wendell <jwendell@gnome.org>
+
+	* Lots of files: Added an 'original size' option in the menu.
+	Closes #509948.
+
 2008-10-04  Jonh Wendell <jwendell@gnome.org>
 
 	* src/vinagre-bookmarks.c (vinagre_bookmarks_init):
